--- a/finalProject/src/view/HotelMS.form
+++ b/finalProject/src/view/HotelMS.form
@@ -47,7 +47,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="13" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Component id="jScrollPane1" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
@@ -80,18 +80,15 @@
                                           </Group>
                                           <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Group type="102" attributes="0">
-                                                  <Component id="modifyRoom" min="-2" pref="96" max="-2" attributes="0"/>
-                                                  <EmptySpace max="32767" attributes="0"/>
-                                                  <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Group type="102" attributes="0">
-                                                  <Component id="addRoom" min="-2" max="-2" attributes="0"/>
-                                                  <EmptySpace pref="72" max="32767" attributes="0"/>
-                                                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                                              </Group>
+                                              <Component id="addRoom" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="modifyRoom" alignment="0" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                          <EmptySpace max="32767" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -103,13 +100,12 @@
                                           <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" attributes="0">
-                                          <EmptySpace min="-2" pref="340" max="-2" attributes="0"/>
-                                          <Component id="makePayment" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="listcustomer" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="243" max="-2" attributes="0"/>
+                                          <Component id="makePayment" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="156" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -124,10 +120,10 @@
                                       <Component id="jTextField3" min="-2" pref="71" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Group type="102" alignment="1" attributes="0">
                                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <EmptySpace max="32767" attributes="0"/>
                                           <Component id="jTextField1" min="-2" pref="71" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="1" attributes="0">
@@ -139,7 +135,7 @@
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="bookRoom" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="105" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -177,12 +173,11 @@
                       <Component id="jTextField4" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="bookRoom" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="deleteRoom" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="bookRoom" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="245" max="-2" attributes="0"/>
@@ -204,12 +199,12 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="22" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="HotelManagementSystem"/>
+            <Property name="text" type="java.lang.String" value="Hotel Management System"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="addRoom">
           <Properties>
-            <Property name="text" type="java.lang.String" value="th&#xea;m ph&#xf2;ng"/>
+            <Property name="text" type="java.lang.String" value="add room"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addRoomActionPerformed"/>
@@ -217,7 +212,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="modifyRoom">
           <Properties>
-            <Property name="text" type="java.lang.String" value="s&#x1eed;a ph&#xf2;ng"/>
+            <Property name="text" type="java.lang.String" value="modify room"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="modifyRoomActionPerformed"/>
@@ -225,7 +220,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="deleteRoom">
           <Properties>
-            <Property name="text" type="java.lang.String" value="x&#xf3;a ph&#xf2;ng"/>
+            <Property name="text" type="java.lang.String" value="delete room"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteRoomActionPerformed"/>
@@ -241,7 +236,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="bookRoom">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x111;&#x1eb7;t ph&#xf2;ng"/>
+            <Property name="text" type="java.lang.String" value="book room"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bookRoomActionPerformed"/>
@@ -249,7 +244,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="makePayment">
           <Properties>
-            <Property name="text" type="java.lang.String" value="t&#x1ea1;o h&#xf3;a &#x111;&#x1a1;n"/>
+            <Property name="text" type="java.lang.String" value="make payment"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="makePaymentActionPerformed"/>
@@ -365,7 +360,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="t&#xec;m ph&#xf2;ng"/>
+            <Property name="text" type="java.lang.String" value="search room"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="listcustomer">
