--- a/finalProject/src/view/ListCustomer.form
+++ b/finalProject/src/view/ListCustomer.form
@@ -41,7 +41,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane1" min="-2" pref="627" max="-2" attributes="0"/>
+          <Component id="jScrollPane1" pref="627" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
